# copilot

./: .gitignore  .gitmodules  README.md  sudoers  testClient.bash  touchall.bash
cmake/: CMakeLists.txt  contoclient.bash  testserver.bash
copilotc-web/: index_new.html
copilotc-web/css/: doDB.css
copilotc-web/html/: authDialog.html  nft.html
copilotc-web/js/: copilot.js
copilotc-web/js/services/: auth.js  authService.js  ldapUsers.js  nftService.js
copilotd/: copilotd.service
copilotd/make/: clibs.mk  progs.mk  sources.mk
copilotd/make/generic/: bin.mk  qt.mk
copilotd/make/premake/: evillib.mk
copilotd/src/: coCore.cpp  coCore.h  coPlugin.h  coPluginElement.cpp  coPluginElement.h  evillib.c  main.cpp  version.h
copilotd/src/plugins/: coreService.cpp  coreService.h  ldapService.cpp  ldapService.h  mqttService.cpp  mqttService.h  nftService.cpp  nftService.h  qwebsocket.cpp  qwebsocket.h  qwebsocketClient.cpp  qwebsocketClient.h  websocket.cpp  websocket.h  websocketClient.cpp  websocketClient.h
doc/: doxyfile  mainpage.h
doc/sphinx/: Makefile  conf.py  index.cpp
ide/: copilot-webfrontend.project  copilot.workspace  copilotd.project  doDB.cbp  doDB.layout  doDB.project  doDB.workspace
ide/codeblocks/: copilotd.cbp
ide/codelite/: copilotd.project  copilotd.workspace
libs/: Makefile  evillib
make/: Makefile  cflags.mk  clibs.mk  progs.mk  sources.mk
make/generic/: bin.mk  gitversion.mk  library.mk  objects.mk  qt.mk
make/postmake/: README  doDB.mk
make/premake/: README  evillib.mk  uuid.mk
pkg/arch/: PKGBUILD
qt/doDBCollector/: doDBCollectorPlugin.cpp  doDBCollectorPlugin.h  doDBCollectorWidget.cpp  doDBCollectorWidget.h
qt/doDBConnection/: doDBConnection.cpp  doDBConnection.h  doDBConnectionEditor.cpp  doDBConnectionEditor.h  doDBConnectionEditor.ui  doDBConnections.cpp  doDBConnections.h  doDBData.h
qt/doDBDebug/: doDBDebug.cpp  doDBDebug.h
qt/doDBEntry/: doDBEntry.cpp  doDBEntry.h
qt/doDBEntryEditor/: doDBEntryEditor.cpp  doDBEntryEditor.h  doDBEntryEditor.ui  doDBEntryPlugin.cpp  doDBEntryPlugin.h
qt/doDBFile/: doDBFile.cpp  doDBFile.h  doDBTableFoldersEditor.cpp  doDBTableFoldersEditor.h  doDBTableFoldersEditor.ui
qt/doDBMainWindow/: doDBMainWindow.cpp  doDBMainWindow.h  doDBMainWindowUi.ui
qt/doDBPlugin/: doDBPlugin.cpp  doDBPlugin.h  doDBPlugins.cpp  doDBPlugins.h
qt/doDBRelation/: doDBRelation.cpp  doDBRelation.h  doDBRelationEditor.cpp  doDBRelationEditor.h  doDBRelationEditor.ui  doDBRelationPlugin.cpp  doDBRelationPlugin.h
qt/doDBSettings/: doDBSettings.cpp  doDBSettings.h
qt/doDBTableEditor/: doDBTableEditor.cpp  doDBTableEditor.h  doDBTableEditor.ui  doDBTableEditor.ui.h  doDBTableEditorPlugin.cpp  doDBTableEditorPlugin.h
qt/doDBTree/: doDBTree.cpp  doDBTree.h  doDBTree.ui
src/: coCore.cpp  coCore.h  coCoreConfig.cpp  coCoreConfig.h  coMessage.cpp  coMessage.h  coMessageQueue.h  coMessageQueue2.cpp  coMessageQueue2.h  coPlugin.cpp  coPlugin.h  coPluginElement.cpp  coPluginList.cpp  coPluginList.h  evillib.c  intl.h  lockPthread.h  main.cpp  main.h  version.h
src/client/: copilotd-ssh-keygen.service  copilotd-ssh.service  copilotd.service  sudoers
src/core/: coConfig.cpp  coConfig.h  coCore.cpp  coCore.h  coCoreConfig.cpp  coCoreConfig.h  coMessage.cpp  coMessageQueue.cpp  coMessageQueue2.cpp  coPlugin.cpp  coPlugin.h  coPluginList.cpp  coreService.cpp  coreService.h  plugin.cpp  plugin.h  pubsub.cpp  pubsub.h  threadList.c  threadList.h
src/develop/: sysState.cpp  sysState.h
src/doDB/: doDB.cpp  doDB.h
src/files/: copilotd-client.service  copilotd-engineering.service  sudoers
src/jsonSettings/: jsonSettings.cpp  jsonSettings.h
src/plugins/: coreService.cpp  coreService.h  gnutls.cpp  gnutls.h  ldapService.cpp  ldapService.h  lsslService.cpp  lsslService.h  lsslSession.cpp  lsslSession.h  mongodb.cpp  mongodb.h  mqttService.cpp  mqttService.h  nftService.cpp  nftService.h  pubsub.cpp  pubsub.h  sshService.cpp  sshService.h  sshSession.cpp  sshSession.h  sslService.cpp  sslService.h  sslSession.cpp  sslSession.h  sysHealthCmd.cpp  sysHealthCmd.h  sysState.cpp  sysState.h  sysStateCmd.cpp  sysStateCmd.h  syslogd.cpp  syslogd.h  uwebsockets.cpp  uwebsockets.h  websocket.cpp  websocket.h  wolfssl.cpp
src/plugins/libretls/: CMakeLists.txt  lsslService.cpp  lsslService.h  lsslSession.cpp  lsslSession.h
src/plugins/websocket/: CMakeLists.txt  uwebsockets.cpp  uwebsockets.h  websocket.cpp  websocket.h
src/server/: copilotd-mqtt.service  copilotd-sshd-keygen.service  copilotd-sshd.service  mqtt-server.conf  sshd_copilotd.conf
